Complete 2FA refactor and OAuth-safe disablement
